src/App.css
html {
  height: 100%;
}

body {
  height: 100%;
  width: 100vw;
}

.App {
  text-align: center;
  width: 100vw;
  height: 100%;
  background-size: cover;
  background-repeat: no-repeat;
  background-position: top;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
  z-index: -2;
  box-shadow: inset 0 0 0 50vw rgba(0, 0, 0, 0.5);
}

.location {
  background-color: rgba(0, 0, 0, 0.3);
  color: white;
  border-radius: 10px;
  padding: 5px;
}

.navButton {
  font-size: x-large;
  border: none;
  background: transparent;
  color: white;
  z-index: 3;
}

.navButton:hover {
  color: lightgrey;
}

.weatherContainer {
  align-self: flex-end;
  color: antiquewhite;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  margin-right: 25px;
}

.tempDescription {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  justify-content: center;
}

.temp {
  margin-bottom: 0;
  font-weight: bolder;
  font-size: 2.5em;
}

.description {
  margin-top: 0;
  font-size: 1.8em;
  margin-bottom: 0;
}

.weatherLocation {
  margin-top: 0;
}

.bulletinContainer {
  width: 90%;
}

.centerContainer {
  width: 100%;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
}

.inputComponent {
  background-color: rgba(255, 255, 255, 0.384);
  border-radius: 16px;
  padding: 30px;
  width: 90%;
  color: whitesmoke;
  font-size: 2.5rem;
  backdrop-filter: blur(2px);
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.inputDescription {
  text-align: left;
  margin: 0;
}

ul {
  list-style: none;
  color: whitesmoke;
  font-size: larger;
  background-color: rgba(255, 255, 255, 0.4);
  border-radius: 16px;
  width: 90%;
  padding: 30px;
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  backdrop-filter: blur(2px);
}

.bulletinContainer {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.listItem {
  border: 1px solid rgba(255, 255, 255, 0.18);
  max-width: 200px;
  min-width: 100px;
  border-radius: 16px;
  padding: 10px;
  margin: 10px;
  position: relative;
  opacity: 0.8;
  word-wrap: break-word;
}

.actions {
  position: absolute;
  top: -12px;
  right: 5px;
  visibility: hidden;
  display: flex;
  flex-direction: row;
}

.actions button {
  border-radius: 16px;
  border: 1px solid rgba(255, 255, 255, 0.45);
  padding: 8px;
  background-color: rgba(255, 0, 0, 0.9);
  color: white;
}

.listItem:hover .actions {
  visibility: visible;
}

#input {
  border: none;
  background-color: transparent;
  outline: none;
  border-bottom: 2px white solid;
  margin: 10px;
  width: 100%;
  font-size: 2rem;
  color: whitesmoke;
  word-wrap: normal;
  text-align: center;
}
.quoteContainer {
  align-self: center;
  justify-self: flex-end;
  display: flex;
  align-items: center;
  justify-content: center;
  margin-bottom: 10px;
}

.quote {
  font-size: 20px;
  color: whitesmoke;
  width: 75%;
  align-self: center;
  justify-self: center;
  border-radius: 16px;
  padding: 10px;
}

@media (min-width: 700px) {
  .weatherContainer {
    margin-right: 5%;
  }
}

